<resources>
    <string name="app_name">Sportracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>

    <string name="login">Sign In With Google</string>
    <string name="greeting">Your\'e just one moment away\nfrom enjoying Sportracker</string>
    <string name="enter_user_email">Enter user email…</string>
    <string name="fragment_contest_title">Contest</string>
    <string name="outColumnHeaderText">Out</string>
    <string name="teamAColumnHeader">Team A</string>
    <string name="teamBColumnHeader">Team B</string>
    <string name="infoButton">Info</string>
    <string name="addMatchButton">Add</string>
    <string name="saveContestButton">Save</string>
    <string name="fragment_enter_users_title">Enter Users</string>
    <string name="team_a_option">Team A</string>
    <string name="team_b_option">Team B</string>
    <string name="contest_info_title">Contest Info</string>
    <string name="no_proofs_yet">no proofs yet</string>
    <string name="match_info_winners_title">Winners</string>
    <string name="match_info_losers_title">Losers</string>
    <string name="enter_contest_name_hint">Enter Contest Name…</string>
    <string name="profile_total_wins">Total Wins :</string>
    <string name="profile_total_losses">Total Losses :</string>
    <string name="profile_win_loss_ratio">Win/Loss Ratio :</string>
    <string name="profile_plus_minus">+ / - :</string>
    <string name="logout">Logout</string>
</resources>